--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -3,11 +3,11 @@
 
 cmake_minimum_required(VERSION 2.6)
 
-set(CMAKE_CXX_FLAGS_DEBUG "-g -Wall -Wextra -Wshadow")
+set(CMAKE_CXX_FLAGS_DEBUG "-g -Wall -Wextra")
 
 set(HDRS 
       src/main.h
-
+      src/BulletXML.h
       #utils/DotSceneLoader.h
       #utils/rapidxml.hpp
        
@@ -21,10 +21,11 @@ set(SRCS
       #utils/DotSceneLoader.cpp
       #utils/BtOgre.cpp
 )
- 
+
+add_library(BulletXML src/BulletXML.h ../utils/rapidxml.hpp src/BulletXML.cpp)
  
 add_executable(OgreApp ${HDRS} ${SRCS})
  
 set_target_properties(OgreApp PROPERTIES DEBUG_POSTFIX _d)
  
-target_link_libraries(OgreApp ${OGRE_LIBRARIES} ${OIS_LIBRARIES} ${BULLET_LIBRARIES} BtOgre DotSceneLoader)
+target_link_libraries(OgreApp ${OGRE_LIBRARIES} ${OIS_LIBRARIES} ${BULLET_LIBRARIES} BtOgre DotSceneLoader BulletXML)
