Ready to merge networking with OGRE/ other, this will be hard

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -23,6 +23,6 @@ set_target_properties(OgreSer PROPERTIES DEBUG_POSTFIX _d)
 target_link_libraries(OgreSer ${OGRE_LIBRARIES} ${OIS_LIBRARIES} ${BULLET_LIBRARIES} BtOgre DotSceneLoader)
 
 
-add_executable(OgreCli src/client.cpp)
+add_executable(OgreCli src/main.h src/client.cpp)
 set_target_properties(OgreCli PROPERTIES DEBUG_POSTFIX _d)
-target_link_libraries(OgreCli ${Boost_LIBRARIES} stdc++)
+target_link_libraries(OgreCli ${BULLET_LIBRARIES} ${OGRE_LIBRARIES} ${Boost_LIBRARIES} stdc++)
