Added BulletXML, going to need to change again

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -8,11 +8,12 @@ set(CMAKE_BUILD_TYPE Debug)
 set(CMAKE_CXX_FLAGS_DEBUG "-g -std=c++0x")
 
 set(HDRS 
-      src/main.h
+      src/network.h
       )
  
 set(SRCS
       src/main.cpp
+      src/serverNetwork.cpp
 )
  
  
@@ -23,6 +24,6 @@ set_target_properties(OgreSer PROPERTIES DEBUG_POSTFIX _d)
 target_link_libraries(OgreSer ${OGRE_LIBRARIES} ${OIS_LIBRARIES} ${BULLET_LIBRARIES} BtOgre DotSceneLoader)
 
 
-add_executable(OgreCli src/main.h src/client.cpp)
+add_executable(OgreCli src/network.h src/client.cpp)
 set_target_properties(OgreCli PROPERTIES DEBUG_POSTFIX _d)
 target_link_libraries(OgreCli ${BULLET_LIBRARIES} ${OGRE_LIBRARIES} ${Boost_LIBRARIES} stdc++)
