Finally made server, client use classes named not test, ready to merge client with networking code

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -6,7 +6,7 @@ cmake_minimum_required(VERSION 2.6)
 set(CMAKE_CXX_FLAGS_DEBUG "-g -Wall -std=c++0x")
 
 set(HDRS 
-      src/main.h
+      src/client.h
       
       #utils/BulletXML.h
       #utils/DotSceneLoader.h
@@ -16,7 +16,7 @@ set(HDRS
       )
  
 set(SRCS
-      src/main.cpp
+      src/clientGraphics.cpp
 )
 
 add_executable(OgreApp ${HDRS} ${SRCS})
